2011-10-13  Julien Chaffraix  <jchaffraix@webkit.org>

        Deprecate event.layerX and event.layerY in WebKit
        https://bugs.webkit.org/show_bug.cgi?id=69951

        Reviewed by Darin Adler.

        * fast/dom/Window/window-xy-properties-expected.txt:
        * fast/events/init-events-expected.txt:
        * fast/events/mouse-relative-position-expected.txt:
        * fast/events/mouseclick-target-and-positioning-expected.txt:
        * fast/events/simulated-click-coords-expected.txt:
        * jquery/events-expected.txt:
        Updated those tests with the console messages to keep our existing
        coverage until we remove the 2 properties.

2011-10-03  Robert Hogan  <robert@webkit.org>

        CSS 2.1 failure: inline-replaced-height-008.htm
        https://bugs.webkit.org/show_bug.cgi?id=69273

        Reviewed by Simon Fraser.

        * css2.1/20110323/floating-replaced-height-008.htm: Added.
        * css2.1/20110323/inline-block-replaced-height-008.htm: Added.
        * css2.1/20110323/inline-replaced-height-008.htm: Added.
        * css2.1/20110323/support/60x60-green.png: Added
        * platform/chromium-linux/css2.1/20110323/floating-replaced-height-008-expected.png: Added.
        * platform/chromium-linux/css2.1/20110323/floating-replaced-height-008-expected.txt: Added.
        * platform/chromium-linux/css2.1/20110323/inline-block-replaced-height-008-expected.png: Added.
        * platform/chromium-linux/css2.1/20110323/inline-block-replaced-height-008-expected.txt: Added.
        * platform/chromium-linux/css2.1/20110323/inline-replaced-height-008-expected.png: Added.
        * platform/chromium-linux/css2.1/20110323/inline-replaced-height-008-expected.txt: Added.

2011-10-13  Adam Klein  <adamk@chromium.org>

        Unreviewed, skip MutationObserver tests on wincairo.
        These tests are not yet enabled on any platform.

        * platform/wincairo/Skipped:

2011-10-13  Andrew Scherkus  <scherkus@chromium.org>
