@@ -1,0 +1,4 @@
+Test for bug 69681, canvas.toDataURL("image/jpeg") should not crash.
+PASS
+
+
